vendor/linux/x64/ftd2xx.h


/** @name FT_HANDLE 
 * An opaque value used as a handle to an opened FT device.
 */
typedef PVOID	FT_HANDLE;


/** @{
 * @name FT_STATUS 
 * @details Return status values for API calls. 
 */
typedef ULONG	FT_STATUS;


enum {
	FT_OK,
	FT_INVALID_HANDLE,
	FT_DEVICE_NOT_FOUND,
	FT_DEVICE_NOT_OPENED,
	FT_IO_ERROR,
	FT_INSUFFICIENT_RESOURCES,
	FT_INVALID_PARAMETER,
	FT_INVALID_BAUD_RATE,

	FT_DEVICE_NOT_OPENED_FOR_ERASE,
	FT_DEVICE_NOT_OPENED_FOR_WRITE,
	FT_FAILED_TO_WRITE_DEVICE,
	FT_EEPROM_READ_FAILED,
	FT_EEPROM_WRITE_FAILED,
	FT_EEPROM_ERASE_FAILED,
	FT_EEPROM_NOT_PRESENT,
	FT_EEPROM_NOT_PROGRAMMED,
	FT_INVALID_ARGS,
	FT_NOT_SUPPORTED,
	FT_OTHER_ERROR,
	FT_DEVICE_LIST_NOT_READY,
};
/** @} */

/** @{ 
 * @name Purge rx and tx buffers
 * @see FT_Purge
 */
#define FT_PURGE_RX			1
#define FT_PURGE_TX			2


#define FT_EVENT_RXCHAR			1
#define FT_EVENT_MODEM_STATUS	2
#define FT_EVENT_LINE_STATUS	4


	/** @noop FT_SetEventNotification
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Sets conditions for event notification.
	 * @param ftHandle Handle of the device.
	 * @param dwEventMask Conditions that cause the event to be set.
	 * @param pvArg Interpreted as the handle of an event.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * An application can use this function to setup conditions which allow a thread to block until one of the
	 * conditions is met. Typically, an application will create an event, call this function, then block on the
	 * event. When the conditions are met, the event is set, and the application thread unblocked.
	 * dwEventMask is a bit-map that describes the events the application is interested in. pvArg is interpreted
	 * as the handle of an event which has been created by the application. If one of the event conditions is
	 * met, the event is set.
	 * @n If FT_EVENT_RXCHAR is set in dwEventMask, the event will be set when a character has been received
	 * by the device.
	 * @n If FT_EVENT_MODEM_STATUS is set in dwEventMask, the event will be set when a change in the modem
	 * signals has been detected by the device.
	 * @n If FT_EVENT_LINE_STATUS is set in dwEventMask, the event will be set when a change in the line status
	 * has been detected by the device.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetEventNotification(
		FT_HANDLE ftHandle,
		DWORD dwEventMask,
		PVOID pvArg
		);


	/** @noop FT_SetChars
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * This function sets the special characters for the device.
	 * @param ftHandle Handle of the device.
	 * @param uEventChar Event character.
	 * @param uEventCharEnabled 0 if event character disabled, non-zero otherwise.
	 * @param uErrorChar Error character.
	 * @param uErrorCharEnabled 0 if error character disabled, non-zero otherwise.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function allows for inserting specified characters in the data stream to represent events firing or
	 * errors occurring.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetChars(
		FT_HANDLE ftHandle,
		UCHAR uEventChar,
		UCHAR uEventCharEnabled,
		UCHAR uErrorChar,
		UCHAR uErrorCharEnabled
		);


	/** @noop FT_SetBreakOn
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Sets the BREAK condition for the device.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code	
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetBreakOn(
		FT_HANDLE ftHandle
		);


	/** @noop FT_SetBreakOff
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Resets the BREAK condition for the device.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetBreakOff(
		FT_HANDLE ftHandle
		);


	/** @noop FT_Purge
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * This function purges receive and transmit buffers in the device.
	 * @param ftHandle Handle of the device.
	 * @param ulMask Combination of FT_PURGE_RX and FT_PURGE_TX.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_Purge(
		FT_HANDLE ftHandle,
		ULONG ulMask
		);


	/** @noop FT_ResetDevice
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later) 
	 * @par Summary
	 * This function sends a reset command to the device.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_ResetDevice(
		FT_HANDLE ftHandle
		);


	/** @noop FT_ResetPort
	 * @par Supported Operating Systems
	 * Windows (2000 and later)
	 * @par Summary
	 * Send a reset command to the port.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function is used to attempt to recover the port after a failure. It is not equivalent 
	 * to an unplug-replug event. For the equivalent of an unplug-replug event, use FT_CyclePort.
	 * @see FT_CyclePort
	 */
	FTD2XX_API FT_STATUS WINAPI FT_ResetPort(
		FT_HANDLE ftHandle
		);


	/** @noop FT_CyclePort
	 * @par Supported Operating Systems
	 * Windows (2000 and later)
	 * @par Summary
	 * Send a cycle command to the USB port.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * The effect of this function is the same as disconnecting then reconnecting the device from 
	 * USB. Possible use of this function is situations where a fatal error has occurred and it is 
	 * difficult, or not possible, to recover without unplugging and replugging the USB cable. 
	 * This function can also be used after reprogramming the EEPROM to force the FTDI device to 
	 * read the new EEPROM contents which would	otherwise require a physical disconnect-reconnect.
	 * @n As the current session is not restored when the driver is reloaded, the application must 
	 * be able to recover after calling this function. It is ithe responisbility of the application 
	 * to close the handle after successfully calling FT_CyclePort.
	 * @n For FT4232H, FT2232H and FT2232 devices, FT_CyclePort will only work under Windows XP and later.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_CyclePort(
		FT_HANDLE ftHandle
		);


	/** @noop FT_Rescan
	 * @par Supported Operating Systems
	 * Windows (2000 and later)
	 * @par Summary
	 * This function can be of use when trying to recover devices programatically.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * Calling FT_Rescan is equivalent to clicking the "Scan for hardware changes" button in the Device
	 * Manager. Only USB hardware is checked for new devices. All USB devices are scanned, not just FTDI
	 * devices.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_Rescan(
		void
		);


	/** @noop FT_Reload
	 * @par Supported Operating Systems
	 * Windows (2000 and later)
	 * @par Summary
	 * This function forces a reload of the driver for devices with a specific VID and PID combination.
	 * @param wVID Vendor ID of the devices to reload the driver for.
	 * @param wPID Product ID of the devices to reload the driver for.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * Calling FT_Reload forces the operating system to unload and reload the driver for the specified device
	 * IDs. If the VID and PID parameters are null, the drivers for USB root hubs will be reloaded, causing all
	 * USB devices connected to reload their drivers. Please note that this function will not work correctly on
	 * 64-bit Windows when called from a 32-bit application.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_Reload(
		WORD wVID,
		WORD wPID
		);


	/** @noop FT_SetResetPipeRetryCount
	 * @par Supported Operating Systems
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Set the ResetPipeRetryCount value.
	 * @param ftHandle Handle of the device.
	 * @param dwCount Unsigned long containing required ResetPipeRetryCount.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function is used to set the ResetPipeRetryCount. ResetPipeRetryCount controls the maximum
	 * number of times that the driver tries to reset a pipe on which an error has occurred.
	 * ResetPipeRequestRetryCount defaults to 50. It may be necessary to increase this value in noisy
	 * environments where a lot of USB errors occur.
	 */
	FTD2XX_API FT_STATUS WINAPI FT_SetResetPipeRetryCount(
		FT_HANDLE ftHandle,
		DWORD dwCount
		);


	/** @noop FT_StopInTask
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Stops the driver's IN task.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function is used to put the driver's IN task (read) into a wait state. It can be used in situations
	 * where data is being received continuously, so that the device can be purged without more data being
	 * received. It is used together with FT_RestartInTask which sets the IN task running again.
	 * @see FT_RestartInTask
	 */
	FTD2XX_API FT_STATUS WINAPI FT_StopInTask(
		FT_HANDLE ftHandle
		);


	/** @noop FT_RestartInTask
	 * @par Supported Operating Systems
	 * Linux
	 * Mac OS X (10.4 and later)
	 * Windows (2000 and later)
	 * Windows CE (4.2 and later)
	 * @par Summary
	 * Restart the driver's IN task.
	 * @param ftHandle Handle of the device.
	 * @returns
	 * FT_OK if successful, otherwise the return value is an FT error code.
	 * @remarks
	 * This function is used to restart the driver's IN task (read) after it has been stopped by a call to
	 * FT_StopInTask.
	 * @see FT_StopInTask
	 */
	FTD2XX_API FT_STATUS WINAPI FT_RestartInTask(
		FT_HANDLE ftHandle
		);