src/bindings_macos_aarch64.rs

extern "C" {
    #[doc = " @noop FT_SetEventNotification"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Sets conditions for event notification."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param dwEventMask Conditions that cause the event to be set."]
    #[doc = " @param pvArg Interpreted as the handle of an event."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " An application can use this function to setup conditions which allow a thread to block until one of the"]
    #[doc = " conditions is met. Typically, an application will create an event, call this function, then block on the"]
    #[doc = " event. When the conditions are met, the event is set, and the application thread unblocked."]
    #[doc = " dwEventMask is a bit-map that describes the events the application is interested in. pvArg is interpreted"]
    #[doc = " as the handle of an event which has been created by the application. If one of the event conditions is"]
    #[doc = " met, the event is set."]
    #[doc = " @n If FT_EVENT_RXCHAR is set in dwEventMask, the event will be set when a character has been received"]
    #[doc = " by the device."]
    #[doc = " @n If FT_EVENT_MODEM_STATUS is set in dwEventMask, the event will be set when a change in the modem"]
    #[doc = " signals has been detected by the device."]
    #[doc = " @n If FT_EVENT_LINE_STATUS is set in dwEventMask, the event will be set when a change in the line status"]
    #[doc = " has been detected by the device."]
    pub fn FT_SetEventNotification(
        ftHandle: FT_HANDLE,
        dwEventMask: DWORD,
        pvArg: PVOID,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetChars"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function sets the special characters for the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param uEventChar Event character."]
    #[doc = " @param uEventCharEnabled 0 if event character disabled, non-zero otherwise."]
    #[doc = " @param uErrorChar Error character."]
    #[doc = " @param uErrorCharEnabled 0 if error character disabled, non-zero otherwise."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function allows for inserting specified characters in the data stream to represent events firing or"]
    #[doc = " errors occurring."]
    pub fn FT_SetChars(
        ftHandle: FT_HANDLE,
        uEventChar: UCHAR,
        uEventCharEnabled: UCHAR,
        uErrorChar: UCHAR,
        uErrorCharEnabled: UCHAR,
    ) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetBreakOn"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Sets the BREAK condition for the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code"]
    pub fn FT_SetBreakOn(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetBreakOff"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Resets the BREAK condition for the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_SetBreakOff(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_Purge"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function purges receive and transmit buffers in the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param ulMask Combination of FT_PURGE_RX and FT_PURGE_TX."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_Purge(ftHandle: FT_HANDLE, ulMask: ULONG) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_ResetDevice"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function sends a reset command to the device."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_ResetDevice(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_ResetPort"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Send a reset command to the port."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function is used to attempt to recover the port after a failure. It is not equivalent"]
    #[doc = " to an unplug-replug event. For the equivalent of an unplug-replug event, use FT_CyclePort."]
    #[doc = " @see FT_CyclePort"]
    pub fn FT_ResetPort(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_CyclePort"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Send a cycle command to the USB port."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " The effect of this function is the same as disconnecting then reconnecting the device from"]
    #[doc = " USB. Possible use of this function is situations where a fatal error has occurred and it is"]
    #[doc = " difficult, or not possible, to recover without unplugging and replugging the USB cable."]
    #[doc = " This function can also be used after reprogramming the EEPROM to force the FTDI device to"]
    #[doc = " read the new EEPROM contents which would\totherwise require a physical disconnect-reconnect."]
    #[doc = " @n As the current session is not restored when the driver is reloaded, the application must"]
    #[doc = " be able to recover after calling this function. It is ithe responisbility of the application"]
    #[doc = " to close the handle after successfully calling FT_CyclePort."]
    #[doc = " @n For FT4232H, FT2232H and FT2232 devices, FT_CyclePort will only work under Windows XP and later."]
    pub fn FT_CyclePort(ftHandle: FT_HANDLE) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_Rescan"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function can be of use when trying to recover devices programatically."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " Calling FT_Rescan is equivalent to clicking the \"Scan for hardware changes\" button in the Device"]
    #[doc = " Manager. Only USB hardware is checked for new devices. All USB devices are scanned, not just FTDI"]
    #[doc = " devices."]
    pub fn FT_Rescan() -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_Reload"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " @par Summary"]
    #[doc = " This function forces a reload of the driver for devices with a specific VID and PID combination."]
    #[doc = " @param wVID Vendor ID of the devices to reload the driver for."]
    #[doc = " @param wPID Product ID of the devices to reload the driver for."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " Calling FT_Reload forces the operating system to unload and reload the driver for the specified device"]
    #[doc = " IDs. If the VID and PID parameters are null, the drivers for USB root hubs will be reloaded, causing all"]
    #[doc = " USB devices connected to reload their drivers. Please note that this function will not work correctly on"]
    #[doc = " 64-bit Windows when called from a 32-bit application."]
    pub fn FT_Reload(wVID: WORD, wPID: WORD) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_SetResetPipeRetryCount"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Set the ResetPipeRetryCount value."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @param dwCount Unsigned long containing required ResetPipeRetryCount."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function is used to set the ResetPipeRetryCount. ResetPipeRetryCount controls the maximum"]
    #[doc = " number of times that the driver tries to reset a pipe on which an error has occurred."]
    #[doc = " ResetPipeRequestRetryCount defaults to 50. It may be necessary to increase this value in noisy"]
    #[doc = " environments where a lot of USB errors occur."]
    pub fn FT_SetResetPipeRetryCount(ftHandle: FT_HANDLE, dwCount: DWORD) -> FT_STATUS;
}
extern "C" {
    #[doc = " @noop FT_StopInTask"]
    #[doc = " @par Supported Operating Systems"]
    #[doc = " Linux"]
    #[doc = " Mac OS X (10.4 and later)"]
    #[doc = " Windows (2000 and later)"]
    #[doc = " Windows CE (4.2 and later)"]
    #[doc = " @par Summary"]
    #[doc = " Stops the driver's IN task."]
    #[doc = " @param ftHandle Handle of the device."]
    #[doc = " @returns"]
    #[doc = " FT_OK if successful, otherwise the return value is an FT error code."]
    #[doc = " @remarks"]
    #[doc = " This function is used to put the driver's IN task (read) into a wait state. It can be used in situations"]
    #[doc = " where data is being received continuously, so that the device can be purged without more data being"]
    #[doc = " received. It is used together with FT_RestartInTask which sets the IN task running again."]
    #[doc = " @see FT_RestartInTask"]
    pub fn FT_StopInTask(ftHandle: FT_HANDLE) -> FT_STATUS;
}
